--- a/sublimepickerlibrary/src/main/res/values/themes.xml
+++ b/sublimepickerlibrary/src/main/res/values/themes.xml
@@ -45,7 +45,7 @@
     </style>
 
     <!-- Light theme -->
-    <style name="SublimePickerStyleLight" parent="Theme.AppCompat.Light">
+    <style name="SublimePickerStyleLight">
         <item name="spDatePickerStyle">@style/SublimeDatePickerStyle</item>
         <item name="spTimePickerStyle">@style/SublimeTimePickerStyle</item>
         <item name="spRecurrencePickerStyle">@style/SublimeRecurrencePickerStyle</item>
